[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
counter = "0.5.7"
itertools = "0.12.0"
rayon = "1.5.1"
indicatif = "0.17.7"
ndarray = "0.15.6"

# [[bin]]
# name = "day01"
# path = "src/day01.rs"
# 
# [[bin]]
# name = "day02"
# path = "src/day02.rs"
# 
# [[bin]]
# name = "day03"
# path = "src/day03.rs"
# 
# [[bin]]
# name = "day04"
# path = "src/day04.rs"
# 
# [[bin]]
# name = "day05"
# path = "src/day05.rs"
# 
# [[bin]]
# name = "day06"
# path = "src/day06.rs"
# 
# [[bin]]
# name = "day07"
# path = "src/day07.rs"
# 
# [[bin]]
# name = "day08"
# path = "src/day08.rs"
# 
# [[bin]]
# name = "day09"
# path = "src/day09.rs"
# 
# [[bin]]
# name = "day10"
# path = "src/day10.rs"
# 
# [[bin]]
# name = "day11"
# path = "src/day11.rs"
# 
# [[bin]]
# name = "day12"
# path = "src/day12.rs"
